@@ -30,6 +30,7 @@ void list_window_name(unsigned long *body);
 void list_icon_name(unsigned long *body);
 void list_class(unsigned long *body);
 void list_res_name(unsigned long *body);
+void list_look(unsigned long *body);
 void list_end(void);
 
 
